# back_queue_metrics

./: .env  Dockerfile.web  Dockerfile.worker  DockerfileCelery  Procfile  README.md  docker-compose.yml  example.env  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
app/: main.py  metric_name.py  model.py  redis_connection.py  web_starter.sh  worker.py
app/adapters/: metrics_controller.py
app/conf/: config.py
celery/: model.py  tasks.py  worker.py  worker_starter.sh
common/: metric_name.py
tests/: test_controller_song.py
