[tool.poetry]
name = "back-queue_metrics"
version = "0.1.0"
description = ""
authors = ["Eliana Gamarra <elianagam2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.75.1"
pydantic = "1.9.0"
pytest = "7.1.1"
uvicorn = "0.17.6"

motor = "2.3.0"
mypy-extensions = "0.4.3"
dnspython = "2.0.0"
pytest-cov = "^3.0.0"
python-dotenv = "^0.20.0"

[tool.pytest.ini_options]
pythonpath = [
  "app"
]

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true